Uploading new routes and moving common funtion from authentication to auth.ts

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DATABASE_URL=postgresql://pgUser:pgPassword@pgHost:pgPort/pgTable
+DATABASE_URL="postgresql://pgUser:pgPassword@pgHost:pgPort/pgTable"
 PORT=3000
+API_BASE_URL="http://localhost:3000"
+AUTH_REDIRECT_URL="http://localhost:5173"
+JWT_SECRET="your-jwt-secret"
