--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.6",
     "eslint": "9",
+    "prettier": "3.6.2",
     "tsx": "^4.20.6"
   },
   "peerDependencies": {
     "typescript": "5"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^1.4.0",
     "@paralleldrive/cuid2": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "chalk": "^5.6.2",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "elysia": "^1.4.15",
