--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@faker-js/faker": "^10.1.0",
     "@rocketseat/eslint-config": "^3.0.12",
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.6",
     "eslint": "9",
@@ -39,6 +40,7 @@
     "drizzle-orm": "^0.44.7",
     "elysia": "^1.4.15",
     "eslint-plugin-drizzle": "^0.2.3",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "zod": "^4.1.12"
