--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "drizzle-typebox": "^0.3.3",
     "elysia": "^1.4.15",
     "eslint-plugin-drizzle": "^0.2.3",
     "nodemailer": "^7.0.10",
